<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ImageView android:id="@+id/imageTest"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:background="@android:color/darker_gray" />
    <Button android:id="@+id/captureImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/labelCaptureImage" />
    <Button android:id="@+id/recognizeImage"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/labelRecognizeImage" />
    <TextView android:id="@+id/textCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:textSize="72sp"
        android:text="@string/labelEmptyChar" />
</LinearLayout>
