<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageSample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/app_name" />

    <Button
        android:id="@+id/pickSample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/labelPickSample" />

    <TextView
        android:id="@+id/textCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/labelCharacterField"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/inputCharacter"
        android:layout_width="96sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:inputType="textCapCharacters" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp" >

        <Button
            android:id="@+id/doTraining"
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignTop="@+id/addTrainingSet"
            android:layout_marginRight="18dp"
            android:text="@string/labelDoTraining" />

        <Button
            android:id="@+id/addTrainingSet"
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:layout_marginRight="22dp"
            android:layout_toLeftOf="@+id/doTraining"
            android:text="@string/labelAddTrainingSet" />

    </RelativeLayout>

</LinearLayout>